5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1577_1330.log
== SUBMITION (2019-03-21 15:46:50) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.167991
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 15:47:29) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.152179
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:03:59) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:04:49) 
-- CODE:
round(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:05:04) 
-- CODE:
prin(round(250/6)
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:05:12) 
-- CODE:
print(round(250/6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:05:21) 
-- CODE:
round(250/6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:05:33) 
-- CODE:
round(250/6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:05:42) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:06:07) 
-- CODE:
print(250/6)
round (41.66)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:06:26) 
-- CODE:
print(250/6)
round (250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:07:12) 
-- CODE:
round(41.6666666)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:07:30) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:08:27) 
-- CODE:
print(round)(250/6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round)(250/6)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:08:50) 
-- CODE:
print(round)(250/, 6)
-- ERROR:
File "XXXX", line 1
    print(round)(250/, 6)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:08:57) 
-- CODE:
print (round)(250/, 6)
-- ERROR:
File "XXXX", line 1
    print (round)(250/, 6)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:09:17) 
-- CODE:
print (round)(250/6, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round)(250/6, 2)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:09:26) 
-- CODE:
print (round)(250/6 ,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round)(250/6 ,2)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:09:45) 
-- CODE:
print (round250/6 ,2))
-- ERROR:
File "XXXX", line 1
    print (round250/6 ,2))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:09:53) 
-- CODE:
print (round(250/6 ,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:10:02) 
-- CODE:
print (round(250/6 ,2))
-- EXECUTION TIME:
0.164113
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:41:09) 
-- CODE:
print (round(250/6 ,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:41:22) 
-- CODE:
print(round(250/6 ,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:41:27) 
-- CODE:
print(round(250/6 ,2))
-- EXECUTION TIME:
0.130864
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
